<?xml version="1.0"?>
<package format="3">
  <name>ros2_pi_camera_bridge</name>
  <version>0.1.0</version>
  <description>Receive Pi camera RTP H264 stream and republish as ROS2 camera topics</description>
  <maintainer email="tvn@example.com">tvn</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>

  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
